<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--tools:context="com.inducesmile.androidcalendardailyview.MainActivity"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/display_current_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/current_day_date"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="3"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="500dp"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="20dp"
                    android:text="@string/time_12am"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="60dp"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="80dp"
                    android:text="@string/time_1am"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="120dp"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="140dp"
                    android:text="@string/time_2am"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="180dp"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="200dp"
                    android:text="@string/time_3am"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="240dp"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="260dp"
                    android:text="@string/time_4am"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="300dp"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="320dp"
                    android:text="@string/time_5am"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="360dp"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="380dp"
                    android:text="@string/time_6am"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="420dp"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="440dp"
                    android:text="@string/time_7am"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="480dp"
                    android:background="@color/colorDivider" />
            </RelativeLayout>

            <View
                android:id="@+id/four"
                android:layout_width="1dp"
                android:layout_height="480dp"
                android:background="@color/colorDivider" />

            <RelativeLayout
                android:id="@+id/left_event_column"
                android:layout_width="0dp"
                android:layout_height="500dp"
                android:layout_weight="8">

                <View
                    android:id="@+id/four_fifteen"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/four_thirty"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/four_fortyfive"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="45dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/five"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="60dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/five_fifteen"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="75dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/five_thirty"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="90dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/five_fortyfive"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="105dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/six"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="120dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/six_fifteen"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="135dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/six_thirty"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="150dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/six_fortyfive"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="165dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/seven"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="180dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/seven_fifteen"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="195dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/seven_thirty"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="210dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/seven_fortyfive"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="225dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/eight"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="240dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/eight_fifteen"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="255dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/eight_thirty"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="270dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/eight_fortyfive"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="285dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/nine"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="300dp"
                    android:background="@color/colorDivider"/>

                <View
                    android:id="@+id/nine_fifteen"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="315dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/nine_thirty"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="330dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/nine_fortyfive"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="345dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/ten"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="360dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/ten_fifteen"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="375dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/ten_thirty"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="390dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/ten_fortyfive"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="405dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/eleven"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="420dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/eleven_fifteen"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="435dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/eleven_thirty"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="450dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/eleven_fortyfive"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="465dp"
                    android:background="@color/colorDivider" />

                <View
                    android:id="@+id/midnight"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="480dp"
                    android:background="@color/colorDivider" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>